--- a/styles/main.scss
+++ b/styles/main.scss
@@ -4,13 +4,13 @@
 @charset "utf-8";
 
 // Our variables
-$base-font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
+$base-font-family: "Gentium Basic", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-line-height: 1.65;
 
-$title-font-family: "BioRhyme", "Source Sans Pro", Helvetica, Arial, sans-serif;
-$heading-font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
-$accent-font-family: "Georgia", $base-font-family;
+$title-font-family: "Passion", "Source Sans Pro", Helvetica, Arial, sans-serif;
+$heading-font-family: "Gentium Basic", Helvetica, Arial, sans-serif;
+$accent-font-family: "Fira Mono", $base-font-family;
 
 $small-font-size:  $base-font-size * 0.875;
 
