--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,4 +15,17 @@
   <meta name="keywords" content="{{ site.keywords }}">
   <meta name="twitter:site" content="@{{ site.handle }}"/>
 
+  {% if page.accent %}
+  <style>
+  .accent, a {
+    color: {{ page.accent }}
+  }
+  .accent-bg, .button:not(.op) {
+    background: {{ page.accent }}
+  }
+  html {
+    background: linear-gradient({{ page.accent }},transparent);
+  }
+  </style>
+  {% endif %}
 </head>
