--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -1,17 +1,26 @@
+// Page border effect
+html {
+  padding: 12px;
+  background: linear-gradient($primary,transparent);
+}
+
 // Navigation
 #navigation {
-  background: $primary-darker;
-  color: $white;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.25);
+  // background: $primary-darker;
+  // color: $white;
+  // box-shadow: 0 2px 5px rgba(0,0,0,0.25);
 
   min-height: 56px;
 
   // Positioning context for the mobile navigation icon
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
   z-index: 9900;
 
   a {
-    color: $white;
+    // color: $white;
   }
 
   .site-title {
@@ -28,6 +37,7 @@
   .site-nav {
     float: right;
     line-height: 56px;
+    font-family: $accent-font-family;
 
     .menu-icon {
       display: none;
@@ -88,8 +98,12 @@
 
 // Page header
 header {
-  background-color: $primary;
-  color: $white;
+  // background-color: $primary;
+  // color: $white;
+  background-image: url(/media/patterns/dot.png);
+  background-repeat: repeat;
+  background-size: 18px 18px;
+  text-align: center;
 }
 
 // Page content
