--- a/_sass/_forms.scss
+++ b/_sass/_forms.scss
@@ -3,12 +3,14 @@
   background: $primary;
   color: white!important;
   display: inline-block;
-  font-family: $base-font-family;
+  // font-family: $base-font-family;
+  font-family: $accent-font-family;
   font-size: $base-font-size;
+  // font-weight: bold;
+  font-weight: normal;
   padding: .5em 1em;
   text-decoration: none;
   border-radius: 4px;
-  font-weight: bold;
   -webkit-user-select: none;
   margin-bottom: $base-font-size;
   border: none;
