--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,7 +8,7 @@ $base-font-family: "Gentium Basic", Helvetica, Arial, sans-serif;
 $base-font-size:   16px;
 $base-line-height: 1.65;
 
-$title-font-family: "Passion", "Source Sans Pro", Helvetica, Arial, sans-serif;
+$title-font-family: "Passion One", "Source Sans Pro", Helvetica, Arial, sans-serif;
 $heading-font-family: "Gentium Basic", Helvetica, Arial, sans-serif;
 $accent-font-family: "Fira Mono", $base-font-family;
 
