--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 
   {% if page.accent %}
   <style>
-  .accent, a {
+  .accent, a, header h1 {
     color: {{ page.accent }}
   }
   .accent-bg, .button:not(.op) {
