--- a/_sass/_site.scss
+++ b/_sass/_site.scss
@@ -1,7 +1,7 @@
 // Page border effect
 html {
   padding: 12px;
-  background: linear-gradient($primary,transparent);
+  background: linear-gradient($black,transparent);
   @include media-query($on-laptop) {
     padding: 8px;
   }
@@ -24,9 +24,11 @@ html {
   left: 0;
   width: 100vw;
   z-index: 9900;
+  padding: 1em 0;
 
   a {
     // color: $white;
+    color: $black;
   }
 
   .site-title {
@@ -104,12 +106,25 @@ html {
 
 // Page header
 header {
+  padding: 0;
+  text-align: center;
   // background-color: $primary;
   // color: $white;
-  background-image: url(/media/patterns/dot.png);
-  background-repeat: repeat;
-  background-size: 18px 18px;
-  text-align: center;
+  .cover {
+    background-image: url(/media/patterns/dot.png);
+    background-repeat: repeat;
+    background-size: 18px 18px;
+    text-align: center;
+    height: 40vh;
+    min-height: 200px;
+    max-height: 400px;
+  }
+  container {
+    max-width: 650px;
+    h1 {
+      margin-top: -.75em;
+    }
+  }
 }
 
 // Page content
