--- a/styles/main.scss
+++ b/styles/main.scss
@@ -33,7 +33,7 @@ $secondary-darker: darken($secondary, 15%);
 
 $red:              #F44336;
 $white:            #ffffff;
-$black:            #3c3836;
+$black:            #000000;
 
 $text-color:       $black;
 $background-color: $white;
